==> 200320810/BLDC-/MDK-ARM/stm32_2.8_lcd.c <==
#include "stm32_2.8_lcd.h"
#include "fonts.h"
#define START_BYTE      0x70
#define SET_INDEX       0x00
#define READ_STATUS     0x01
#define LCD_WRITE_REG   0x02
#define LCD_READ_REG    0x03

void LCD_nCS_StartByte(u8 Start_Byte)
{
  
 u16 x;
 x=Start_Byte;
	
	HAL_GPIO_WritePin(LCD_RS_PORT,LCD_RS_PIN,GPIO_PIN_RESET);  
  LCD_CtrlLinesWrite(LCD_NCS_GPIO_PORT, LCD_NCS_PIN, GPIO_PIN_RESET);
 
   
	LCD_PORT_PORT->ODR = x;

  HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_RESET);
	HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_SET); 	
}

void LCD_WriteRegIndex(u8 LCD_Reg)
{
  u16 x;
  x=LCD_Reg;
 // x=x<<8;
 // LCD_nCS_StartByte(START_BYTE | SET_INDEX); 
  LCD_CtrlLinesWrite(LCD_NCS_GPIO_PORT, LCD_NCS_PIN, GPIO_PIN_RESET);  


	HAL_GPIO_WritePin(LCD_RS_PORT,LCD_RS_PIN,GPIO_PIN_RESET);  
  LCD_PORT_PORT->ODR = 0;
  //Delay(10);		
  HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_RESET);
	HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_SET); 

  LCD_PORT_PORT->ODR =x;
 // Delay(10);		
  HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_RESET);
	HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_SET); 	   
  
	HAL_GPIO_WritePin(LCD_RS_PORT,LCD_RS_PIN,GPIO_PIN_SET); 

  LCD_CtrlLinesWrite(LCD_NCS_GPIO_PORT, LCD_NCS_PIN, GPIO_PIN_SET);	
}

void LCD_WriteReg(u8 LCD_Reg, u16 LCD_RegValue)
{
  /* Write 16-bit Index (then Write Reg) */
  LCD_WriteRegIndex(LCD_Reg);
  /* Write 16-bit Reg */
  /* Reset LCD control line(/CS) and Send Start-Byte */
  LCD_CtrlLinesWrite(LCD_NCS_GPIO_PORT, LCD_NCS_PIN, GPIO_PIN_RESET);	
   
  HAL_GPIO_WritePin(LCD_RS_PORT,LCD_RS_PIN,GPIO_PIN_SET); 	
	LCD_PORT_PORT->ODR =LCD_RegValue>>8;
 // Delay(5);		
  HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_RESET);
  //Delay(10);
	HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_SET); 
	LCD_PORT_PORT->ODR =LCD_RegValue;
 // Delay(10);		
  HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_RESET);
  //Delay(10);
	HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_SET); 
	
  LCD_CtrlLinesWrite(LCD_NCS_GPIO_PORT, LCD_NCS_PIN, GPIO_PIN_SET);		
}

void LCD_WriteRAM(u16 RGB_Code)
{
	HAL_GPIO_WritePin(LCD_RS_PORT,LCD_RS_PIN,GPIO_PIN_SET);  
	LCD_PORT_PORT->ODR = RGB_Code>>8;
	
  HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_RESET);
	HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_SET);  

	LCD_PORT_PORT->ODR = RGB_Code;
  HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_RESET);
	HAL_GPIO_WritePin(LCD_WR_PORT,LCD_WR_PIN,GPIO_PIN_SET);  
}

void LCD_CtrlLinesConfig(void)
{
  GPIO_InitTypeDef GPIO_InitStruct;
   unsigned int i;
  
	__HAL_RCC_GPIOC_CLK_ENABLE();
  __HAL_RCC_GPIOB_CLK_ENABLE();
	
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull = GPIO_PULLUP;
	
	GPIO_InitStruct.Pin = LCD_NCS_PIN;
  HAL_GPIO_Init(LCD_NCS_GPIO_PORT, &GPIO_InitStruct);
	
  
	GPIO_InitStruct.Pin = LCD_RST_PIN;
  HAL_GPIO_Init(LCD_RST_GPIO_PORT, &GPIO_InitStruct);
  
	
  HAL_GPIO_WritePin(LCD_RST_GPIO_PORT,LCD_RST_PIN,GPIO_PIN_RESET);
  for(i=0;i<5000;i++);	
  HAL_GPIO_WritePin(LCD_RST_GPIO_PORT,LCD_RST_PIN,GPIO_PIN_SET);
}

void LCD_CtrlLinesWrite(GPIO_TypeDef* GPIOx, u16 CtrlPins, GPIO_PinState BitVal)
{
  HAL_GPIO_WritePin(GPIOx,CtrlPins,BitVal);
}
